--- a/euprava/backend/api_gateway/api_gateway.conf
+++ b/euprava/backend/api_gateway/api_gateway.conf
@@ -5,11 +5,11 @@ server {
 
     location /api/healthcare/ {
                 if ($request_method ~* "(GET|POST)") {
-                  add_header "Access-Control-Allow-Origin"  "https://localhost:4200" always;
+                  add_header "Access-Control-Allow-Origin"  "http://localhost:3000" always;
                 }
 
                 if ($request_method = OPTIONS ) {
-                  add_header "Access-Control-Allow-Origin"  "https://localhost:4200" always;
+                  add_header "Access-Control-Allow-Origin"  "http://localhost:3000" always;
                   add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
                   add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
                   return 200;
