--- a/euprava/backend/docker-compose.yml
+++ b/euprava/backend/docker-compose.yml
@@ -35,34 +35,21 @@ services:
       - network
 
   auth-service:
-    image: jboss/keycloak:latest
-    container_name: auth_service
+    image: auth-service
+    container_name: auth-service
+    build:
+      context: .
     environment:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
-      - KEYCLOAK_IMPORT=
-      - KEYCLOAK_CLIENT_ID=your-client-id
-      - KEYCLOAK_CLIENT_SECRET=your-client-secret
-      - KEYCLOAK_REDIRECT_URL=http://auth-service:8080/callback
-      - KEYCLOAK_ALLOWED_AUDIENCE=your-client-id
+      - KEYCLOAK_CLIENT_ID=euprava
+      - KEYCLOAK_CLIENT_SECRET=dz0a1vY7Jqgbw59W0KiZs1rffuHB2a1t
+      - KEYCLOAK_REDIRECT_URL=http://localhost:8080/callback
+
     volumes:
       - ./.containers/identity:/opt/jboss/keycloak/standalone/data
     ports:
-      - 18080:8080
-    depends_on:
-      - auth-service-web
-
-  auth-service-web:
-    build: .
-    container_name: auth_service_web
-    environment:
-      - PORT=8080
-    ports:
-      - "8080:8080"
-    volumes:
-      - .:/app
-    depends_on:
-      - auth-service
+      - 18080:18080
 
 
   healthcare_db:
