--- a/euprava/backend/.env
+++ b/euprava/backend/.env
@@ -5,3 +5,9 @@ HEALTHCARE_SERVICE_PORT=8004
 
 HEALTHCARE_DB_HOST=healthcare_db
 HEALTHCARE_DB_PORT=27017
+
+FOOD_SERVICE_HOST=food_service
+FOOD_SERVICE_PORT=8003
+
+FOOD_DB_HOST=food_db
+FOOD_DB_PORT=27017
