--- a/euprava/backend/docker-compose.yml
+++ b/euprava/backend/docker-compose.yml
@@ -16,8 +16,37 @@ services:
       HEALTHCARE_DB_PORT: ${HEALTHCARE_DB_PORT}
       HEALTHCARE_SERVICE_PORT: ${HEALTHCARE_SERVICE_PORT}
       HEALTHCARE_SERVICE_HOST: ${HEALTHCARE_SERVICE_HOST}
+      FOOD_DB_HOST: ${FOOD_DB_HOST}
+      FOOD_DB_PORT: ${FOOD_DB_PORT}
+      FOOD_SERVICE_PORT: ${FOOD_SERVICE_PORT}
+      FOOD_SERVICE_HOST: ${FOOD_SERVICE_HOST}
     depends_on:
       - healthcare_db
+    networks:
+      - network
+    volumes:
+      - logs_volume:/logs
+
+  food_service:
+    image: food_service
+    container_name: food_service
+    build:
+      context: .
+      dockerfile: ./food-service/Dockerfile
+    restart: always
+    ports:
+      - ${FOOD_SERVICE_PORT}:${FOOD_SERVICE_PORT}
+    environment:
+      HEALTHCARE_DB_HOST: ${HEALTHCARE_DB_HOST}
+      HEALTHCARE_DB_PORT: ${HEALTHCARE_DB_PORT}
+      HEALTHCARE_SERVICE_PORT: ${HEALTHCARE_SERVICE_PORT}
+      HEALTHCARE_SERVICE_HOST: ${HEALTHCARE_SERVICE_HOST}
+      FOOD_DB_HOST: ${FOOD_DB_HOST}
+      FOOD_DB_PORT: ${FOOD_DB_PORT}
+      FOOD_SERVICE_PORT: ${FOOD_SERVICE_PORT}
+      FOOD_SERVICE_HOST: ${FOOD_SERVICE_HOST}
+    depends_on:
+      - food_db
     networks:
       - network
     volumes:
@@ -34,40 +63,19 @@ services:
     networks:
       - network
 
-  auth-service:
-    image: jboss/keycloak:latest
-    container_name: auth_service
-    environment:
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=admin
-      - KEYCLOAK_IMPORT=
-      - KEYCLOAK_CLIENT_ID=your-client-id
-      - KEYCLOAK_CLIENT_SECRET=your-client-secret
-      - KEYCLOAK_REDIRECT_URL=http://auth-service:8080/callback
-      - KEYCLOAK_ALLOWED_AUDIENCE=your-client-id
-    volumes:
-      - ./.containers/identity:/opt/jboss/keycloak/standalone/data
-    ports:
-      - 18080:8080
-    depends_on:
-      - auth-service-web
 
-  auth-service-web:
-    build: .
-    container_name: auth_service_web
-    environment:
-      - PORT=8080
-    ports:
-      - "8080:8080"
-    volumes:
-      - .:/app
-    depends_on:
-      - auth-service
 
 
   healthcare_db:
     image: mongo
     container_name: healthcare_db
+    restart: on-failure
+    networks:
+      - network
+
+  food_db:
+    image: mongo
+    container_name: food_db
     restart: on-failure
     networks:
       - network
