--- a/euprava/backend/docker-compose.yml
+++ b/euprava/backend/docker-compose.yml
@@ -63,13 +63,13 @@ services:
     networks:
       - network
 
-  user-service:
+  auth-service:
     build:
-      context: ./backend/user-service
-      dockerfile: dockerfile
+      context: ./auth-service
+      dockerfile: Dockerfile
     restart: always
-    container_name: "user-service"
-    hostname: "user-service"
+    container_name: auth-service
+    hostname: "auth-service"
     ports:
       - 8080:8080
     environment:
@@ -133,7 +133,7 @@ services:
       - network
 
 volumes:
-
+  user_data_base:
   logs_volume:
 
 networks:
