--- a/euprava/backend/docker-compose.yml
+++ b/euprava/backend/docker-compose.yml
@@ -102,6 +102,41 @@ services:
     networks:
       - network
 
+  university-service:
+    build:
+      context: ./university-service
+    restart: always
+    container_name: university-service
+    hostname: "university-service"
+    ports:
+      - 8088:8088
+    environment:
+      - PORT=8088
+      - MONGO_DB_URI=mongodb://root:pass@profile_data_base:27017
+    networks:
+      - network
+
+  university_data_base:
+    hostname: "university_data_base"
+    container_name: "university_data_base"
+    image: mongo
+    restart: always
+    ports:
+      - "27018:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: pass
+      MONGO_INITDB_DATABASE: studentDB
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok'
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    volumes:
+      - university_data_base:/data/db
+    networks:
+      - network
+
   # keycloak:
   #   image: jboss/keycloak:latest
   #   container_name: keycloak
@@ -134,6 +169,7 @@ services:
 
 volumes:
   user_data_base:
+  student_data_base:
   logs_volume:
 
 networks:
