Mala izmena seminarskog

--- a/euprava/backend/api_gateway/api_gateway.conf
+++ b/euprava/backend/api_gateway/api_gateway.conf
@@ -1,20 +1,23 @@
 server {
-
-    listen               8000;
-
+    listen 8000;
 
     location /api/healthcare/ {
-                if ($request_method ~* "(GET|POST)") {
-                  add_header "Access-Control-Allow-Origin"  "http://localhost:3000" always;
-                }
+        if ($request_method ~* "(GET|POST|PATCH|PUT|DELETE)") {
+            add_header "Access-Control-Allow-Origin" "http://localhost:4200" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, PATCH, PUT, DELETE, HEAD" always;
+            add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept" always;
+            add_header "Access-Control-Allow-Credentials" "true" always;
+        }
 
-                if ($request_method = OPTIONS ) {
-                  add_header "Access-Control-Allow-Origin"  "http://localhost:3000" always;
-                  add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
-                  add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
-                  return 200;
-                }
-                proxy_pass http://healthcare_service:8004;
-                rewrite ^/api/healthcare/(.*)$ /$1 break;
-            }
+        if ($request_method = OPTIONS) {
+            add_header "Access-Control-Allow-Origin" "http://localhost:4200" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, PATCH, PUT, DELETE, HEAD" always;
+            add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept" always;
+            add_header "Access-Control-Allow-Credentials" "true" always;
+            return 204;
+        }
+
+        proxy_pass http://healthcare_service:8004;
+        rewrite ^/api/healthcare/(.*)$ /$1 break;
+    }
 }
