Communication with university service done

--- a/euprava/backend/.env
+++ b/euprava/backend/.env
@@ -11,3 +11,9 @@ FOOD_SERVICE_PORT=8003
 
 FOOD_DB_HOST=food_db
 FOOD_DB_PORT=27017
+
+UNIVERSITY_SERVICE_HOST=university-service
+UNIVERSITY_SERVICE_PORT=8088
+
+UNIVERSITY_DB_HOST=university_data_base
+UNIVERSITY_DB_PORT=27017
