--- a/euprava/backend/docker-compose.yml
+++ b/euprava/backend/docker-compose.yml
@@ -20,6 +20,10 @@ services:
       FOOD_DB_PORT: ${FOOD_DB_PORT}
       FOOD_SERVICE_PORT: ${FOOD_SERVICE_PORT}
       FOOD_SERVICE_HOST: ${FOOD_SERVICE_HOST}
+      UNIVERSITY_DB_HOST: ${UNIVERSITY_DB_HOST}
+      UNIVERSITY_DB_PORT: ${UNIVERSITY_DB_PORT}
+      UNIVERSITY_SERVICE_PORT: ${UNIVERSITY_SERVICE_PORT}
+      UNIVERSITY_SERVICE_HOST: ${UNIVERSITY_SERVICE_HOST}
     depends_on:
       - healthcare_db
     networks:
@@ -107,12 +111,11 @@ services:
       context: ./university-service
     restart: always
     container_name: university-service
-    hostname: "university-service"
     ports:
       - 8088:8088
     environment:
       - PORT=8088
-      - MONGO_DB_URI=mongodb://root:pass@profile_data_base:27017
+      - MONGO_DB_URI=mongodb://root:pass@university_data_base:27017
     networks:
       - network
 
@@ -169,7 +172,7 @@ services:
 
 volumes:
   user_data_base:
-  student_data_base:
+  university_data_base:
   logs_volume:
 
 networks:
